# rathole

./: README.md  pyproject.toml  rathole.example.toml
deploy/: Dockerfile  docker-compose.yml
src/rathole/: config.py  ctl.py  daemon.py  filter_meta.py  hook.py  i2p.py  lora.py  presets.py  registry.py  tui.py
src/rathole/filters/: __init__.py  interface_rate.py  lora_airtime.py  lora_snr.py  packet_size.py  trusted_peers.py
