[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rathole"
version = "1.0.0"
description = "Transport node security suite for Reticulum"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [{name = "Ratspeak"}]
keywords = ["reticulum", "mesh", "security", "transport", "i2p", "lora"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = [
    "rns>=0.7.0",
    "rich>=13.0",
    "msgpack>=1.0",
    "certifi>=2024.0",
]

[project.urls]
Homepage = "https://ratspeak.org"
Repository = "https://github.com/ratspeak/rathole-py"
Issues = "https://github.com/ratspeak/rathole-py/issues"

[project.optional-dependencies]
metrics = ["prometheus_client>=0.19"]
tui = ["textual>=0.50"]
setup = ["configobj>=5.0"]
all = ["rathole[metrics,tui,setup]"]

[project.scripts]
rathole = "rathole.cli:main"
rat = "rathole.ctl:main"
rathole-tui = "rathole.tui:main"

[tool.setuptools.packages.find]
where = ["src"]
